3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Refactoring of move_apply -> move_on for several object classes.
Removed obsolete server/swamp.c file.
See types/ChangeLog for details.
    server/apply.c
    server/swamp.c
    server/time.c
Yann Chachkoff 2007-01-21

Some changes to the mapper.
 utils/mapper.c: some code cleaning. New tags.
 utils/templates/map.template map_with_exit.template: use new tags, legend.
Ryo 2007-01-21

server/spell_util.c: Consider all stats when swapping random stats due to
   a failed spell.
Andreas Kirschbaum 2007-01-21

Implement feature request #656195: More effects of confusion.
Three effects can happen:
 * one item is transformed temporarily to flowers
 * 2 random statistics are temporarily swapped
 * a random spell is cast.
A new force type is introduced, FORCE_TRANSFORMED_ITEM, which does some
magic when it expires.
Modified files:
 include/spells.h
 server/spell_util.c time.c
Ryo 2007-01-20

Partially revert patch from 2006-31-12: girdles are not armours for wearing restrictions.
 server/apply.c player.c
Ryo 2007-01-20

configure.ac: add --disable-logger flag to not build cflogger plugin, courtesy gros.
----
Implement partially feature request #656194: It should be possible to curse and bless.
Added 2 new spells, 'curse item' and 'bless item', that work on marked item.
Also changed the spell name matching logic, to always return if a perfect match is found.
 include/spells.h sproto.h
 server/spell_effect.c spell_util.c
Ryo 2007-01-15

types/{dummy.c, Makefile.in, Makefile.am}, include/typesproto.h: Remove dummy
   file now that it's no longer necessary
Alex Schultz 2007-01-14
